# UglyTests

./: CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/include/UglyEngine/: Application.h  Core.h  Engine.h  Version.h  Version.h.in  VulkanManager.h
Engine/src/: Application.cpp  Engine.cpp  LogFormatter.cpp  VulkanManager.cpp
Triangle/: CMakeLists.txt  main.cpp
